# libtimer

./: .gitignore  CMakeLists.txt
.github/workflows/: build_and_test.yaml
examples/: main.cpp
include/everest/: scoped_elapsed_timer.hpp  timer.hpp
tests/: CMakeLists.txt  libtimer_unit_test.cpp
